# gst_video_switch

./: CMakeLists.txt  video_switch_pipeline.cpp
